--- a/Minha pagina Christian Ferreira/style.css
+++ b/Minha pagina Christian Ferreira/style.css
@@ -129,7 +129,7 @@ a:hover {
     transition: 400ms ease-in-out 0s;
 }
 
-.menu-items{
+.menu-items {
     position: fixed;
     top: 0;
     left: 0;
@@ -183,7 +183,7 @@ a:hover {
 }
 
 #toggle:checked ~ .menu {
-    box-shadow: 0px 0px 0px 100vmax white;
+    box-shadow: 0px 0px 0px 100vmax rgb(255, 255, 255);
     z-index: 1;
 }
 
